--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
   };
 
   const DATA = {
-    cremes:["Ninho","Ninho trufado","Morango","Cupuaçu","Amendoim","Ovomaltine","Oreo","Tapioca","Chiclete"],
-    coberturas:["Açaí","Avelã com cacau","Leite condensado","Morango","Chocolate","Caramelo","Cookies cream","Pistache","Fini dentaduras","Fini beijos","Fini bananas","Nutella (adicional)"],
+    cremes:["Ninho","Ninho trufado","Morango","Cupuaçu","Amendoim","Ovomaltine","Oreo","Tapioca","Chiclete", "Maracujá"],
+    coberturas:["Açaí","Avelã com cacau","Leite condensado","Morango","Chocolate","Caramelo","Cookies cream","Pistache","Fini dentaduras","Fini beijos","Fini bananas"],
     frutas:["Banana","Kiwi","Morango"],
     recheios:["Leite em pó","Ovomaltine","Farinha Lacta","Oreo","M&M","Granola","Coco","Farinha de castanha","Marshmallow","Amendoim","Gotas","Bis","Canudo","Flocos de arroz","Chocoball","Chocopoower","Paçoca","Cereja","Jujuba"],
     adicionais:[{name:"Nutella",price:2}]
@@ -371,4 +371,5 @@
 </script>
 </body>
 </html>
+
 
